--- a/style.css
+++ b/style.css
@@ -6,6 +6,8 @@
   body {
     font-family: helvetica, arial, sans-serif;
     margin: 25px;
+    background-image:url(https://cdn.glitch.me/c96e7747-7443-477b-89ae-aa8da73a09af%2Fistockphoto-499156538-612x612.jpg?v=1637092220023);
+     background-size: 150px;
   }
   
   main {
