--- a/style.css
+++ b/style.css
@@ -6,8 +6,9 @@
   body {
     font-family: helvetica, arial, sans-serif;
     margin: 25px;
-    background-image:url(https://cdn.glitch.me/c96e7747-7443-477b-89ae-aa8da73a09af%2Fistockphoto-499156538-612x612.jpg?v=1637092220023);
-     background-size: 150px;
+    background-image:url(https://cdn.glitch.me/c96e7747-7443-477b-89ae-aa8da73a09af%2F560435_dance-floor_1600x1071_h.png?v=1637092479252);
+    background-size: 100% auto;
+    background-repeat: no-repeat;
   }
   
   main {
